# FactReasoner

./: .gitignore  README.md  pyproject.toml
examples/: fact_graph.json  flaherty_google.json
notebooks/: factreasoner.ipynb  factscore.ipynb
src/: main.py
src/configs/: hf.yaml  rits.yaml
src/fact_reasoner/: atom_extractor.py  atom_reviser.py  context_retriever.py  context_summarizer.py  data_utils.py  fact_datasets.py  fact_graph.py  fact_utils.py  factreasoner.py  llm_handler.py  nli_extractor.py  pipeline.py  prompts.py  query_builder.py  search_api.py  utils.py  version.py
src/fact_reasoner/baselines/: fact_safe.py  fact_score.py  factscore.py  factverify.py  veriscore.py
src/fact_reasoner/configs/: models.yaml
src/fact_reasoner/nli/: align_scorer.py
