[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]

[project]
name = "fact_reasoner"
version = "0.3.0"
description = "Factuality Assessment for Foundation Models"
authors = [
    {name = "Radu Marinescu",email = "radu.marinescu@ie.ibm.com"},
    {name = "Javier Carnerero Cano",email = "javier.cano@ibm.com"},
    {name = "Massimiliano Pronesti",email = "massimiliano.pronesti@ibm.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    # TODO: figure out correct versions dependencies
    "accelerate>=0.22.0",
    "datasets>=2.4.0",
    "huggingface-hub",
    "numpy>=1.22.4",
    "pandas>=1.5.0",
    "scikit-learn>=1.1",
    "scipy>=1.8.1",
    "tokenizers>=0.13.3",
    "torch>=2.0.1",
    "tqdm>=4.65.0",
    "transformers>=4.32.0",
    "peft>=0.6.0",
    "evaluate>=0.4.1",
    "rouge>=1.0.1",
    "rouge_score>=0.1.2",
    "nltk>=3.6.6",
    "protobuf",
    "sentencepiece",
    "python-dotenv",
    "matplotlib",
    "ipykernel",
    "ipywidgets",
    "rank_bm25",
    "pgmpy",
    "spacy",
    "flask",
    "bert-score",
    "helper-utils",
    "langchain",
    "langchain-community",
    "wikipedia",
    "chromadb",
    "litellm",
    "beautifulsoup4",
    "lxml",
    "pypdf",
    "html2text",
    "pytorch-lightning",
    "thefuzz",
    "vllm",
    "langchain_huggingface"
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

[project.urls]
Source = "https://github.com/IBM/FactReasoner"